[package]
name = "discord_media_export"
version = "0.1.0"
edition = "2021"

[dependencies]
itertools = "0.13.0"
linkify = "0.10.0"
reqwest = { version = "0.12.5", features = ["blocking"] }
serde = { version = "1.0.205", features = ["serde_derive"] }
serde_json = "1.0.122"
url = "2.5.2"
url-normalizer = "0.2.0"
